# aspm-scanner-cli

./: .gitignore  Dockerfile  Makefile  Pipfile  README.md  accuknox-aspm-scanner.spec  policy.yaml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build-deb..yml  build-deb.yml  docker.yml  release.yml
aspm_cli/: cli.py
aspm_cli/commands/: __init__.py  base_command.py  gate_command.py  precommit_command.py  scan_command.py  tool_command.py
aspm_cli/pre_commit_wrapper/: config.py
aspm_cli/scan/: __init__.py  api_discovery.py  container.py  dast.py  iac.py  ml_scan.py  sast.py  sca.py  secret.py  sq_sast.py  trivy_runner.py
aspm_cli/scanners/: __init__.py  api_discovery_scanner.py  base_scanner.py  container_scanner.py  dast_scanner.py  iac_scanner.py  ml_scan_scanner.py  sast_scanner.py  sca_scanner.py  secret_scanner.py  sq_sast_scanner.py
aspm_cli/tool/: download.py  manager.py
aspm_cli/utils/: __init__.py  api_discovery.py  common.py  config.py  docker_pull.py  docker_runtime.py  git.py  git_info.py  handle_failure.py  logger.py  ml_scan.py  path_safety.py  policy.py  sbom.py  sca_prepare.py  spinner.py  subprocess_utils.py  upload.py  validation.py  version.py
docs/: onprem-poc-runbook.md  onprem-setup-guide.md
tests/: test_sast_container_mode.py
utils/: .gitignore  prepare-aspm-scanners-darwin.sh  prepare-aspm-scanners-windows.sh  prepare-aspm-scanners.sh
utils/package/debian/: changelog  control  files  install  rules
