[project]
name = "accuknox-aspm-scanner"
version = "0.1.0"
description = "AccuKnox ASPM Scanner"
authors = [{ name = "AccuKnox", email = "accuknox@accuknox.com" }]
dependencies = [
    "pydantic==2.11.4",
    "colorama==0.4.6",
    "requests==2.32.3"
]

[project.scripts]
accuknox-aspm-scanner = "aspm_cli.cli:main"
