[metadata]
name = accuknox-aspm-scanner
version = 0.8.16
description = AccuKnox ASPM Scanner
author = AccuKnox
author_email = accuknox@accuknox.com

[options]
python_requires = >=3.6
install_requires =
    pydantic==2.11.4
    colorama==0.4.6
    requests==2.32.3
    asyncio==3.4.3
    accuknox-sq-sast @ https://github.com/accuknox/aspm-sastjob/releases/download/2.0.0/accuknox_sq_sast-0.1.0-py3-none-any.whl
packages = find:

[options.entry_points]
console_scripts =
    accuknox-aspm-scanner = aspm_cli.cli:main
